# FlexFL

./: .gitignore  Dockerfile  LICENSE  README.md  dataset_division.sh  datasets.json  example.json  pyproject.toml  requirements.txt  run.sh  slurm_script.sh  test.json
Comm/: MPI.py  Zenoh.py
Datasets/: Base.py  CIFAR10.py  DatasetUtils.py  FASHION.py  IOT_DNL.py  MNIST.py  Slicing5G.py  TON_IOT.py  UNSW.py
FL/: CentralizedAsync.py  CentralizedSync.py  CentralizesAsync.py  DecentralizedAsync.py  DecentralizedSync.py  _CentralizedAsync.py  _DecentralizedAsync.py
ML/: Base.py  MLUtils.py  Tensorflow.py  Torch.py
Messages/: Raw.py
Models/: CIFAR10_M1.py  FASHION_M1.py  IOT_DNL.py  IOT_DNL_M1.py  Metadata.json  UNSW_M1.py
Programs/: config.py  correlation.py  division.py  fl.py  preprocess.py  xai.py
Utils/: CommABC.py  CommUtils.py  DatasetUtils.py  FLUtils.py  ImportsABC.py  Logger.py  MLUtils.py  MessageABC.py  ModelUtils.py  XAIUtils.py
XAI/: ALE.py  GradCAM.py  IntegratedGrads.py  PDV.py  PI.py
comm/: Zenoh.py
comms/: Kafka.py  MPI.py  MQTT.py  Zenoh.py
fl_algorithms/: DecentralizedAsync.py  DecentralizedSync.py
message_layers/: Raw.py
ml_frameworks/: PyTorch.py  TensorFlow.py  Tensorflow.py
model_finder/: model_finder.py
my_builtins/: CommABC.py  DatasetABC.py  FederatedABC.py  Logger.py  MLFrameworkABC.py  MessageABC.py  NeuralNetworkABC.py  WorkerManager.py
my_datasets/: Housing.py  IOT_DNL.py
neural_networks/: IOT_DNL.py  _metadata.json
notebooks/: comms.ipynb
programs/: auto_restart.py  config.py  division.py  fl.py  preprocess.py
requirements/: docker.sh  kafka-compose.yml  mpi.sh  mqtt-compose.yml  terraform.sh
results/: comparison.md  worker_matrix.py
scripts/: _sweep_common.sh  assemble_meta_dataset.py  compute_partition_entropy.py  config.json  dataset_division.sh  extend_disk.sh  extract_meta_features.py  gather_results.sh  hostfile.txt  ids.txt  ips.txt  known_hosts.sh  ntp_master.sh  ntp_worker.sh  proxmox.py  run._on_vms.sh  run.sh  run_commands.sh  run_dataset_divisions.sh  run_full_experiments.sh  run_locally.sh  run_machine_benchmark.sh  run_on_vms.sh  run_on_vms_mpi.sh  run_test_experiment.sh  sample_hyperparameters.py  select_dataset_tiers.py  send_dataset.sh  set_ip.sh  setup_vms.sh  setup_workers.sh  slurm_script.sh  subset_ids.py  utils.md  vm.sh  vm_identity.py  vm_run.sh  vms.sh
temp/: benchmark.py  disconnect.py  kill.sh  resilience.py  results.ipynb  vms.py  (+4 more)
(+200 files in other folders)
