[project]
name = "FlexFL"
version = "0.1.5"
description = "Flexible Federated Learning Framework"
readme = "README.md"
authors = [
    { name = "Leonardo Almeida", email = "leonardoalmeida7777@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "kaggle>=1.7.4.2",
    "keras>=3.9.0",
    "nbformat>=5.10.4",
    "numpy>=2.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "tabulate>=0.9.0",
    "wget>=3.2",
]


[project.scripts]
flexfl = "flexfl.cli.fl:main"
flexfl-division = "flexfl.cli.division:main"
flexfl-preprocess = "flexfl.cli.preprocess:main"
flexfl-res = "flexfl.cli.auto_restart:main"


[project.optional-dependencies]
all = [
    "jax[cpu]>=0.5.3",
    "tensorflow-cpu>=2.18.0",
    "tf2onnx>=1.16.1",
    "torch>=2.6.0",
    "kafka-python>=2.1.2",
    "mpi4py>=4.0.3",
    "paho-mqtt>=2.1.0",
    "eclipse-zenoh==1.1.1",
]
comms = [
    "kafka-python>=2.1.2",
    "mpi4py>=4.0.3",
    "eclipse-zenoh==1.1.1",
    "paho-mqtt>=2.1.0",
]
ml = [
    "jax[cpu]>=0.5.3",
    "tensorflow-cpu>=2.18.0",
    "tf2onnx>=1.16.1",
    "torch>=2.6.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
